--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,4 +27,4 @@ jobs:
         pip install django
     - name: Run Tests
       run: |
-        python manage.py runserver 0.0.0.0:80
+        python manage.py runserver
