--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,4 +27,5 @@ jobs:
         pip install django
     - name: Run Tests
       run: |
-        python manage.py runserver
+        python manage.py test
+        
