--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,7 +25,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install django
-    - name: Run Tests
+    - name: Run server
       run: |
-        python manage.py test
+        python manage.py runserver 0.0.0.0:80
+        
         
