--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ description: >-
   Githubtohaoyangli own page. 
   Githubtohaoyangli的个人页面
 url: "githubtohaoyangli.github.io"
+icon: "/favicon.ico"
 github_username:  githubtohaoyangli
 theme: minima
 plugins:
