--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #写一个底部的config，带有title：Hello! This is how_to_create email:fairzlq@gmail.com
-title: Hello! This is how_to_create
+title: Hello! This is code jumping
 email: fairzlq@gmail.com
 description: >- 
   Githubtohaoyangli own page. 
