对网站下载更改

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 #写一个底部的config，带有title：Hello! This is how_to_create email:fairzlq@gmail.com
 title: Hello! This is code jumping
-email: fairzlq@gmail.com
+email: fairzlq@gmail.com, fairzlq@hotmail.com, hsdfg3@outlook.com
 description: >- 
   Githubtohaoyangli own page. 
   Githubtohaoyangli的个人页面
